...
            .overlay(
                RoundedRectangle(cornerRadius: 10)
                    .stroke(style: StrokeStyle(lineWidth: 1, dash: [5]))
                    .foregroundColor(.gray)
            )
        })
        .accessibilityIdentifier("ImageUploadImageIdentifier")
    }
    
    var deleteButton: some View {
        Button(action: {
            deleteAction()
        }, label: {
...
            .overlay(
                RoundedRectangle(cornerRadius: 10)
                    .stroke(Color.red, lineWidth: 1)
                    .foregroundColor(.red)
            )
        })
        .accessibilityIdentifier("ImageDeleteIdentifier")
    }
    
    func loadImagesFromURLs(imageURLs: [String]) {
        imageViewModel.loadImageFromURL(imageURLs: imageURLs) { images in
            imagesArray.append(contentsOf: images)
        }
...
                                    .stroke(Color.allFieldBorderColor, lineWidth: 1)
                            }
                        })
                        .onTapGesture {
                            handleImageSelection(image)
                        }
                        .accessibilityIdentifier("DetailPageImageSelectionIdentifier")
                }
            }
        }
    }
    
    private func handleImageSelection(_ image: UIImage) {
...
