...
                                    viewModel.tableDataModel.selectAllRows()
                                } else {
                                    viewModel.tableDataModel.emptySelection()
                                }
                            }
                            .disabled(viewModel.tableDataModel.rowOrder.count == 0)
                            .accessibilityIdentifier("SelectAllRowSelectorButton")
                    }
                    Text("#")
                        .frame(width: 40, height: 60)
                        .border(Color.tableCellBorderColor)
                    if viewModel.tableDataModel.canShowSingleClickEditColumn() {
                        Image(systemName: "square.and.pencil")
...
                .background(colorScheme == .dark ? Color(UIColor.systemGray6) : Color.tableColumnBgColor)
                .overlay(
                    RoundedRectangle(cornerRadius: 0)
                        .inset(by: 1)
                        .stroke(currentSelectedCol != index ? Color.tableCellBorderColor : Color.blue, lineWidth: 1.5)
                )
                .accessibilityIdentifier("\(column.title)/ColumnButtonIdentifier")
                .zIndex(currentSelectedCol == index ? 1 : 0)
                .onTapGesture {
                    if !([.image, .block, .progress, .signature].contains(viewModel.tableDataModel.getColumnType(columnId: column.id ?? "")) || viewModel.tableDataModel.rowOrder.count == 0) {
                        currentSelectedCol = currentSelectedCol == index ? Int.min : index
                    }
                }
...
                            .frame(width: 40, height: 60)
                            .background(Color.rowSelectionBackground(isSelected: isRowSelected, colorScheme: colorScheme))
                            .border(Color.tableCellBorderColor)
                            .onTapGesture {
                                viewModel.tableDataModel.toggleSelection(rowID: rowArray.first?.rowID ?? "")
                            }
                            .accessibilityIdentifier("MyButton")
                        
                    }
                    Text("\(index+1)")
                        .foregroundColor(.secondary)
                        .font(.caption)
                        .frame(width: 40, height: 60)
...
